--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML>
-<HTML>
-   <HEAD>
-      
-   </HEAD>
-   <BODY>
-      <P>Hello world!
+<html lang="en">
+  <body>
     <div id="my-login-button-target" />
     <script>
        window.snapKitInit = function () {
@@ -12,7 +7,7 @@
         // Mount Login Button
         snap.loginkit.mountButton(loginButtonIconId, {
           clientId: 'f6152660-4a9c-49f2-8cc4-74ae0d7d8019',
-          redirectURI: 'your-redirectURI',
+          redirectURI: 'https://xrisis.net/entry',
           scopeList: [
             'user.display_name',
             'user.bitmoji.avatar',
@@ -33,6 +28,5 @@
         sjs.parentNode.insertBefore(js, sjs);
       }(document, 'script', 'loginkit-sdk'));
     </script>
-				
-   </BODY>
-</HTML>
+  </body>
+</html>
