--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <body>
-    Hello world!
+    Hello world
     <div id="my-login-button-target" />
     <script>
        window.snapKitInit = function () {
@@ -8,7 +8,7 @@
         // Mount Login Button
         snap.loginkit.mountButton(loginButtonIconId, {
           clientId: 'f6152660-4a9c-49f2-8cc4-74ae0d7d8019',
-          redirectURI: 'https://localhost:8081/callback',
+          redirectURI: 'https://xrisis.net/',
           scopeList: [
             'user.display_name',
             'user.bitmoji.avatar',
