--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <body>
-    Hello world
+    Hello world!!
     <div id="my-login-button-target" />
     <script>
        window.snapKitInit = function () {
