--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         // Mount Login Button
         snap.loginkit.mountButton(loginButtonIconId, {
           clientId: 'f6152660-4a9c-49f2-8cc4-74ae0d7d8019',
-          redirectURI: 'https%253A%252F%252Fxrisis.net%252F%',
+          redirectURI: 'https://localhost:3000/',
           scopeList: [
             'user.display_name',
             'user.bitmoji.avatar',
