--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <body>
-    Hello world!!
+    Hello world!
     <div id="my-login-button-target" />
     <script>
        window.snapKitInit = function () {
@@ -8,7 +8,7 @@
         // Mount Login Button
         snap.loginkit.mountButton(loginButtonIconId, {
           clientId: 'f7cecd20-9b61-4c88-97b1-4fff298790ae',
-          redirectURI: 'https://xrisis.net/',
+          redirectURI: 'https://xrisis.net/callback',
           scopeList: [
             'user.display_name',
             'user.bitmoji.avatar',
