--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html lang="en">
   <body>
-    Hello world
+    Hello world!
     <div id="my-login-button-target" />
     <script>
        window.snapKitInit = function () {
         var loginButtonIconId = 'my-login-button-target';
         // Mount Login Button
         snap.loginkit.mountButton(loginButtonIconId, {
-          clientId: 'f7cecd20-9b61-4c88-97b1-4fff298790ae',
+          clientId: 'f6152660-4a9c-49f2-8cc4-74ae0d7d8019',
           redirectURI: 'https://xrisis.net://snap-kit/auth',
           scopeList: [
             'user.display_name',
