--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
-<html lang="en">
-  <body>
-    Hello world
+<header class="v-header container">
+<div class="fullscreen-video-wrap">
+
+<div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/s/khrxp/lcwfuy?autoplay=1&muted=1" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+
+  </header>
+
+  <section class="section section-a">
+    <div class="container">
+    <div class="header-overlay"></div>
+    <div class="header-content text-md-center">
+      <h1>Let your close ones know you're safe</h1>
+      Secure log-in to Snapchat and location sharing
+    </div>
+      
     <div id="my-login-button-target" />
     <script>
        window.snapKitInit = function () {
@@ -19,7 +31,6 @@
           },
         });
       };
-
       // Load the SDK asynchronously
       (function (d, s, id) {
         var js, sjs = d.getElementsByTagName(s)[0];
@@ -29,5 +40,5 @@
         sjs.parentNode.insertBefore(js, sjs);
       }(document, 'script', 'loginkit-sdk'));
     </script>
-  </body>
-</html>
+    </div>
+  </section>
