--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         // Mount Login Button
         snap.loginkit.mountButton(loginButtonIconId, {
           clientId: 'f6152660-4a9c-49f2-8cc4-74ae0d7d8019',
-          redirectURI: 'https://xrisis.net/',
+          redirectURI: 'https://xrisis.net/login_page',
           scopeList: [
             'user.display_name',
             'user.bitmoji.avatar',
