--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <header class="v-header container">
  <div class="fullscreen-video-wrap">
       
@@ -44,3 +47,6 @@
     </script>
     </div>
   </section>
+   </body>
+  </head>
+  </html>
