--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+ <link rel=stylesheet" href="style.css">
 <header class="v-header container">
  <div class="fullscreen-video-wrap">
       
