--- a/login_page.html
+++ b/login_page.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <html>
+  <head>
 <body>
-Hello world
+  Please accept location permission.
+  <p></p>
+<div id='startLat'></div>
+<div id='startLon'></div>
 </body>
+ </head>
 </html>
