--- a/login_page.html
+++ b/login_page.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
 <html>
   <head>
-<body>
-  Please accept location permission.
-  <p></p>
-<div id='startLat'></div>
+  <script language="javascript">
+    function WriteToFile(passForm) {
+      var fso = new ActiveXObject("Scripting.FileSystemObject");
+      <div id='startLat'></div>
 <div id='startLon'></div>
-</body>
- </head>
+      var fileLoc = "D:\\sample.csv";
+      var file = fso.CreateTextFile(fileLoc, true);
+      file.writeline(passForm.startLat.value + ',' +
+                     passForm.startLon.value);
+      file.Close();
+      alert('File created successfully at location: ' + fileLoc);
+     }
+  </script>
+  </head>
 </html>
+</br></br></html>
